--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,10 +1,10 @@
-<nav class='bg-royal-blue'>
+<nav class='bg-royal-blue sticky top-0 z-50'>
   <div class='flex h-14 items-center justify-center sm:justify-start gap-2 sm:gap-32'  data-controller='products--query'>
     <div class='pl-2'>
       <%= link_to 'Toprice', root_path, class: 'bg-peach text-black active:text-white sm:hover:text-white rounded-md px-2 sm:px-4 py-3 font-medium' %>
     </div>
     <div class='flex items-center gap-2'>
-      <%= text_field_tag 'search', nil, placeholder: t(:enter_the_name_of_the_product), class: 'px-2 rounded-md h-8 w-60 sm:w-96' %>
+      <%= text_field_tag 'search', nil, placeholder: t(:enter_the_name_of_the_product), class: 'px-2 rounded-md h-8 w-60 sm:w-96', data: { action: 'keydown.enter->products--query#apply' } %>
       <div>
         <button type='button' class='sm:bg-yellow-400 sm:rounded-md sm:p-1' data-action='click->products--query#apply'>
           <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='sm:hidden w-6 h-6'>
