refactor and some fixes

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,4 @@
-<div class='sm:flex' data-controller='products--query'>
-  <filter class='mr-2'>
-    <div class='sm:hidden flex justify-center items-center bg-green-200 rounded-md mb-2 sticky top-16 z-50 sm:z-0' data-controller='products--toggle-mobile-filterbar'>
-      <button type='button' class='w-full py-2 pl-3 active:bg-green-300' data-action='click->products--toggle-mobile-filterbar#toggle'><%= t :filters %></button>
-      <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6 mx-2'>
-        <path stroke-linecap='round' stroke-linejoin='round' d='M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 01-.659 1.591l-5.432 5.432a2.25 2.25 0 00-.659 1.591v2.927a2.25 2.25 0 01-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 00-.659-1.591L3.659 7.409A2.25 2.25 0 013 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0112 3z' />
-      </svg>
-    </div>
-    <div id='filterbar' class='hidden sm:flex sm:flex-col rounded-md sm:w-72 p-2 border-2 border-gray-300'>
-      <companies><%= t :companies %>
-        <% @companies.each do |company| %>
-          <div class='px-2 py-1'>
-            <input type='checkbox' id='<%= "#{company.id}-#{company.name}" %>' class='sm:hover:cursor-pointer'>
-            <label for='<%= "#{company.id}-#{company.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= company.name %></label>
-          </div>
-        <% end %>
-      </companies>
-      <categories><%= t :categories %>
-        <% @categories.each do |category| %>
-          <div class='px-2 py-1'>
-            <input type='checkbox' id='<%= "#{category.id}-#{category.name}" %>' class='sm:hover:cursor-pointer'>
-            <label for='<%= "#{category.id}-#{category.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= category.name %></label>
-          </div>
-        <% end %>
-      </categories>
-      <div class='mt-2 flex justify-around'>
-        <%= link_to t(:clear), products_path, class: 'py-2 px-3 text-base font-medium text-blue-500 border-t-2 rounded-sm active:bg-blue-400 active:text-white', data: { action: 'click->products--query#clear' } %>
-        <button type='button' class='py-2 px-3 text-base font-medium text-green-500 border-t-2 rounded-sm active:bg-green-300 active:text-white' data-action='click->products--query#apply'><%= t :apply %></button>
-      </div>
-    </div>
-  </filter>
-  <%= render partial: 'products', locals: { '@products': @products, '@pagy': @pagy } %>
+<div class='sm:flex'>
+  <%= render partial: 'filter', locals: { 'companies': @companies, 'categories': @categories } %>
+  <%= render partial: 'products', locals: { 'products': @products, 'pagy': @pagy } %>
 </div>
