--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,7 +1,7 @@
-<products id='products'>
+<div id='products'>
   <div class='bg-white mb-2'>
     <div class='mb-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4'>
-      <% @products.each do |product| %>
+      <% products.each do |product| %>
         <%= link_to product do %>
           <div class='group relative'>
             <div class='min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-100 group-hover:opacity-75 lg:aspect-none lg:h-80'>
@@ -21,5 +21,5 @@
       <% end %>
     </div>
   </div>
-  <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
-</products>
+  <%== pagy_nav(pagy) if pagy.pages > 1 %>
+</div>
