--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= render 'layouts/nav' %>
+    <p class='notice'><%= notice %></p>
+    <p class='alert'><%= alert %></p>
     <main class='p-2'>
       <%= yield %>
     </main>
