make specific format for keywords

--- a/app/views/admin_panel/categories/_form.html.erb
+++ b/app/views/admin_panel/categories/_form.html.erb
@@ -9,7 +9,7 @@
 
   <div>
     <%= f.label :keywords %><br>
-    <%= f.text_area :keywords %><br>
+    <%= f.text_area :keywords_by_semicolons %><br>
     <% category.errors.full_messages_for(:keywords).each do |message| %>
       <div><%= message %></div>
     <% end %>
