--- a/app/views/admin_panel/categories/show.html.erb
+++ b/app/views/admin_panel/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @category.name %></h1>
 
-<p><%= @category.keywords %></p>
+<p><%= @category.keywords_by_semicolons %></p>
 
 <ul>
   <li><%= link_to 'Edit', edit_admin_panel_category_path(@category) %></li>
