--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -4,7 +4,7 @@
       <% products.each do |product| %>
         <%= link_to product do %>
           <div class='group relative'>
-            <div class='min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-100 group-hover:opacity-75 lg:aspect-none lg:h-80'>
+            <div class='min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md group-hover:opacity-75 lg:aspect-none lg:h-80'>
               <%= image_tag product.image, alt: product.name, class: 'h-full w-full object-cover rounded-md object-center lg:h-full lg:w-full' %>
             </div>
             <div class='mt-4'>
