--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
     <%= render 'layouts/nav' %>
     <p class='notice'><%= notice %></p>
     <p class='alert'><%= alert %></p>
-    <main class='p-2'>
+    <main class='p-2 mb-2'>
       <%= yield %>
     </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
