--- a/app/views/products/_filter.html.erb
+++ b/app/views/products/_filter.html.erb
@@ -5,22 +5,24 @@
       <path stroke-linecap='round' stroke-linejoin='round' d='M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 01-.659 1.591l-5.432 5.432a2.25 2.25 0 00-.659 1.591v2.927a2.25 2.25 0 01-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 00-.659-1.591L3.659 7.409A2.25 2.25 0 013 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0112 3z' />
     </svg>
   </div>
-  <div id='filter' class='hidden overflow-auto h-96 sm:h-auto sm:sticky sm:flex sm:flex-col rounded-md sm:w-72 p-2 border-2 bg-white border-gray-300 top-28 sm:top-16 z-50 sm:z-0'>
-    <div id='companies'><%= t(:'filter.companies') %>
-      <% companies.each do |company| %>
-        <div class='px-2 py-1'>
-          <input type='checkbox' id='<%= "#{company.name}" %>' value='<%= "#{company.id}" %>' class='sm:hover:cursor-pointer'>
-          <label for='<%= "#{company.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= company.name %></label>
-        </div>
-      <% end %>
-    </div>
-    <div id='categories'><%= t(:'filter.categories') %>
-      <% categories.each do |category| %>
-        <div class='px-2 py-1'>
-          <input type='checkbox' id='<%= "#{category.name}" %>' value='<%= "#{category.id}" %>' class='sm:hover:cursor-pointer'>
-          <label for='<%= "#{category.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= category.name %></label>
-        </div>
-      <% end %>
+  <div id='filter' class='hidden sm:sticky sm:flex sm:flex-col rounded-md sm:w-72 p-2 border-2 bg-white border-gray-300 top-28 sm:top-16 z-50 sm:z-0'>
+    <div class='overflow-auto h-96 sm:h-auto'>
+      <div id='companies'><%= t(:'filter.companies') %>
+        <% companies.each do |company| %>
+          <div class='px-2 py-1'>
+            <input type='checkbox' id='<%= "#{company.name}" %>' value='<%= "#{company.id}" %>' class='sm:hover:cursor-pointer'>
+            <label for='<%= "#{company.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= company.name %></label>
+          </div>
+        <% end %>
+      </div>
+      <div id='categories'><%= t(:'filter.categories') %>
+        <% categories.each do |category| %>
+          <div class='px-2 py-1'>
+            <input type='checkbox' id='<%= "#{category.name}" %>' value='<%= "#{category.id}" %>' class='sm:hover:cursor-pointer'>
+            <label for='<%= "#{category.name}" %>' class='sm:hover:cursor-pointer sm:hover:bg-slate-100 pl-1'><%= category.name %></label>
+          </div>
+        <% end %>
+      </div>
     </div>
     <div class='mt-2 flex justify-around'>
       <%= link_to t(:'filter.clear'), products_path, class: 'py-2 px-3 text-base font-medium text-blue-500 border-t-2 rounded-sm hover:bg-blue-400 hover:text-white active:bg-blue-400 active:text-white', data: { controller: 'products--search', action: 'click->products--search#clear' } %>
