--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,11 +1,11 @@
 <div id='products' data-controller='products--search' data-action='click->products--search#hideFilter'>
   <div class='bg-white mb-2'>
-    <div class='mb-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4'>
+    <div class='mb-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4'>
       <% products.each do |product| %>
         <%= link_to product do %>
           <div class='group relative'>
-            <div class='h-64 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md group-hover:opacity-75 sm:h-60 md:h-70 lg:h-80'>
-              <%= image_tag product.image, alt: product.name, class: 'h-full w-full object-cover rounded-md object-center lg:h-full lg:w-full' %>
+            <div class='h-60 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md group-hover:opacity-75 sm:h-60 md:h-64 lg:h-72 xl:h-80'>
+              <%= image_tag product.image, alt: product.name, class: 'h-full w-full object-cover rounded-md object-center' %>
             </div>
             <div class='mt-4'>
               <h3 class='text-sm text-gray-700'>
